[package]
name = "sea-jet-derive"
version = "0.1.0"
authors = [ "KhulnaSoft DevSec <security@khulnasoft.com>" ]
edition = "2021"
description = "Derive macros for sea-jet"
license = "MIT OR Apache-2.0"
repository = "https://github.com/khulnasoft/sea-jet"
categories = [ "database" ]
keywords = [ "database", "sql", "mysql", "postgres", "sqlite" ]

[lib]
proc-macro = true
